WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186794
Wasm: Any function argument of type Void should be a validation error
https://bugs.webkit.org/show_bug.cgi?id=186794
Summary
Wasm: Any function argument of type Void should be a validation error
Saam Barati
Reported
2018-06-18 18:41:05 PDT
...
Attachments
patch
(3.65 KB, patch)
2018-06-18 18:54 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
patch for landing
(4.00 KB, patch)
2018-06-18 19:03 PDT
,
Saam Barati
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews206 for win-future
(12.78 MB, application/zip)
2018-06-18 21:15 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews107 for mac-sierra-wk2
(3.42 MB, application/zip)
2018-06-19 01:16 PDT
,
EWS Watchlist
no flags
Details
patch for landing
(4.87 KB, patch)
2018-06-19 11:09 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2018-06-18 18:41:43 PDT
<
rdar://problem/41140257
>
Saam Barati
Comment 2
2018-06-18 18:54:22 PDT
Created
attachment 343002
[details]
patch
Keith Miller
Comment 3
2018-06-18 18:59:24 PDT
Comment on
attachment 343002
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=343002&action=review
r=me with comments
> JSTests/wasm/function-tests/void-argument-type-should-be-a-validation-error.js:15 > + .Function("callFunc", { params: ["i32", "i32", "void"], ret: "void" }) > + .Return() > + .End()
Can we get some more test cases.
> Source/JavaScriptCore/wasm/WasmModuleParser.cpp:130 > WASM_PARSER_FAIL_IF(!parseResultType(argumentType), "can't get ", i, "th argument Type"); > + WASM_PARSER_FAIL_IF(argumentType == Type::Void, "Argument number ", i, " has type Void. An argument cannot be of type Void.");
Nit: I think this should be parseValueType.
Saam Barati
Comment 4
2018-06-18 19:03:07 PDT
Created
attachment 343004
[details]
patch for landing
EWS Watchlist
Comment 5
2018-06-18 20:24:35 PDT
Comment on
attachment 343004
[details]
patch for landing
Attachment 343004
[details]
did not pass jsc-ews (mac): Output:
http://webkit-queues.webkit.org/results/8240187
New failing tests: wasm.yaml/wasm/self-test/test_BuilderJSON.js.wasm-no-cjit-yes-tls-context wasm.yaml/wasm/self-test/test_BuilderJSON.js.wasm-eager-jettison wasm.yaml/wasm/self-test/test_BuilderJSON.js.wasm-no-tls-context wasm.yaml/wasm/self-test/test_BuilderJSON.js.wasm-slow-memory wasm.yaml/wasm/self-test/test_BuilderJSON.js.wasm-no-call-ic wasm.yaml/wasm/self-test/test_BuilderJSON.js.default-wasm
EWS Watchlist
Comment 6
2018-06-18 21:15:03 PDT
Comment on
attachment 343004
[details]
patch for landing
Attachment 343004
[details]
did not pass win-ews (win): Output:
http://webkit-queues.webkit.org/results/8241210
New failing tests: http/tests/security/canvas-remote-read-remote-video-redirect.html
EWS Watchlist
Comment 7
2018-06-18 21:15:15 PDT
Created
attachment 343016
[details]
Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
EWS Watchlist
Comment 8
2018-06-19 01:16:02 PDT
Comment on
attachment 343004
[details]
patch for landing
Attachment 343004
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/8244298
New failing tests: accessibility/mac/selection-notification-focus-change.html
EWS Watchlist
Comment 9
2018-06-19 01:16:03 PDT
Created
attachment 343028
[details]
Archive of layout-test-results from ews107 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
Saam Barati
Comment 10
2018-06-19 11:09:52 PDT
Created
attachment 343068
[details]
patch for landing
WebKit Commit Bot
Comment 11
2018-06-19 11:48:34 PDT
Comment on
attachment 343068
[details]
patch for landing Clearing flags on attachment: 343068 Committed
r232970
: <
https://trac.webkit.org/changeset/232970
>
WebKit Commit Bot
Comment 12
2018-06-19 11:48:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug