Wasm: Any function argument of type Void should be a validation error https://bugs.webkit.org/show_bug.cgi?id=186794 <rdar://problem/41140257>

Reviewed by Keith Miller.

JSTests:

* wasm/Builder.js:
(const._normalizeFunctionSignature):
* wasm/function-tests/void-argument-type-should-be-a-validation-error.js: Added.
(getBinary):
* wasm/self-test/test_BuilderJSON.js:

Source/JavaScriptCore:

* wasm/WasmModuleParser.cpp:
(JSC::Wasm::ModuleParser::parseType):


Canonical link: https://commits.webkit.org/202073@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232970 268f45cc-cd09-0410-ab3c-d52691b4dbfc