Source/bmalloc/bmalloc/ProcessCheck.h
@@ -39,4 +39,10 @@ bool gigacageEnabledForProcess();
 inline bool gigacageEnabledForProcess() { return true; }
 #endif
 
+#if BUSE(CHECK_NANO_MALLOC)
+bool shouldProcessUnconditionallyUseBmalloc();
+#else
+inline bool shouldProcessUnconditionallyUseBmalloc() { return true; }
+#endif
+
 }
