JSTests/wasm/Builder.js
@@ -44,7 +44,7 @@ const _unknownSectionId = 0;
 const _normalizeFunctionSignature = (params, ret) => {
     assert.isArray(params);
     for (const p of params)
-        assert.truthy(WASM.isValidValueType(p), `Type parameter ${p} needs a valid value type`);
+        assert.truthy(WASM.isValidValueType(p) || p === "void", `Type parameter ${p} needs a valid value type`);
     if (typeof(ret) === "undefined")
         ret = "void";
     assert.isNotArray(ret, `Multiple return values not supported by WebAssembly yet`);
